--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,10 @@
 node_modules
+docs
+.idea
 .gitignore
 .eslintrc.yml
-.README.md
-.idea
-docs
+.eslintrc.yml
 .docma.json
 package-lock.json
+README.md
+CHANGELOGS.MD
