--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ws": "^7.4.3"
   },
   "devDependencies": {
-    "discord.js": ">=12.0.0 <13.0.0",
+    "discord.js": "^12.5.1",
     "typescript": "^4.2.2"
   }
 }
