--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/Deivu/Shoukaku"
   },
   "dependencies": {
-    "abort-controller": "^3.0.0",
-    "node-fetch": "^2.6.1",
+    "petitio": "^1.3.0",
     "ws": "^7.4.4"
   },
   "devDependencies": {
