--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/Deivu/Shoukaku"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "petitio": "^1.3.0",
     "ws": "^7.4.4"
   },
