Update docs.yml (#4)
* Update docs.yml

* Update docs.yml

* chore: test docs :)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,11 +2,9 @@ name: Build-Docs
 
 on:
   push:
-    branches:
-      - "*"
-  pull_request:
-    branches:
-      - "**"
+      paths:
+      - '**.js'
+      branches: [ master, dev, next ]
 
 jobs:
   Build-Docs:
