--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.4",
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "index.js",
-  "types": "index.d.ts",
+  "types": "types/index.d.ts",
   "scripts": {
     "docs:build": "docma build",
     "docs:dev": "docma serve"
