feat(Socket): events improvements for the Player (#72)
* Auto Build Docs

* feat(Socket): event when a track ends globally emitted

* Auto Build Docs

* fix: conflicts

* feat(ShoukakuPlayer): set textChannelId option

* feat(Socket): added more player events

* fix: missing emit events

* feat(ShoukakuPlayer): custom optional metadata for player instances

* refactor: optimized types

* fix: types typo

* fix: typo

* refactor: better implementation of global player events

* fix: types

* fix: eslint rules

* refactor: saya reviews

* remove(ShuokakuPlayer): unfortunately, a great option has been removed :(

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "index.js",
-  "types": "index.d.ts",
+  "types": "types/index.d.ts",
   "scripts": {
     "docs:build": "docma build",
     "docs:dev": "docma serve"
