--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "docma": "github:Deivu/docma#cd93f9c20453127e2eae928ddd7e30a1f927fad9"
+    "@types/node": "^17.0.35",
+    "@types/ws": "^8.5.3",
+    "docma": "github:Deivu/docma#cd93f9c20453127e2eae928ddd7e30a1f927fad9",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
