--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
+    "@augu/eslint-config": "^2.2.0",
     "@types/node": "^17.0.35",
     "@types/ws": "^8.5.3",
-    "docma": "github:Deivu/docma#cd93f9c20453127e2eae928ddd7e30a1f927fad9",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
