feat: add prepare script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "dist/index.js",
   "scripts": {
+    "prepare": "tsc --outDir ./dist",
     "compile": "tsc",
     "build": "npm run compile && npm run build:docs",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/."
