--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shoukaku",
-  "version": "3.0.0-dev",
+  "version": "3.0.0",
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "dist/index.js",
   "scripts": {
