--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "dist/index.js",
   "scripts": {
-    "compile": "tsc",
-    "build": "npm run compile && npm run build:docs",
+    "build": "tsc && npm run build:docs",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
-    "prepare": "tsc --outDir ./dist"
+    "prepare": "tsc"
   },
   "keywords": [
     "bot",
