--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "3.0.2",
   "description": "A lavalink wrapper that supports almost all libraries",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc && npm run build:docs",
+    "build": "tsc && npm run build:esm && npm run build:docs",
+    "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
     "prepare": "tsc"
   },
@@ -42,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
+    "gen-esm-wrapper": "^1.1.3",
     "ts-node": "^10.8.0",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.4"
