chore: rework .npmignore to reflect changes in v3

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,10 @@
-node_modules
-docs
+.github
 assets
-.gitattributes
-.idea
-.gitignore
-.eslintrc.yml
+docs
+src
 .eslintignore
-docma.json
-package-lock.json
-README.md
-CHANGELOGS.MD
+.eslintrc.json
+.gitattributes
+.gitignore
+index.ts
+tsconfig.json
