--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shoukaku",
-  "version": "3.0.2",
-  "description": "A lavalink wrapper that supports almost all libraries",
+  "version": "3.0.3",
+  "description": "A stable and updated wrapper around Lavalink",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
