--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shoukaku",
-  "version": "3.2.0",
+  "version": "4.0.0-dev",
   "description": "A stable and updated wrapper around Lavalink",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
