--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsc && npm run build:esm && npm run build:docs",
     "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
+    "lint": "eslint --fix --ext .ts",
     "prepare": "tsc && npm run build:esm"
   },
   "keywords": [
@@ -53,6 +54,6 @@
     "gen-esm-wrapper": "^1.1.3",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.24",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.0"
   }
 }
