--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
   "scripts": {
-    "build": "tsc && npm run build:esm && npm run build:docs",
-    "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
+    "build": "npm run build:ts && npm run build:docs",
+    "build:ts": "tsup --config tsup-config.json",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
-    "lint": "eslint --fix --ext .ts",
-    "prepare": "tsc && npm run build:esm"
+    "lint": "eslint --fix --ext .ts"
   },
   "keywords": [
     "bot",
@@ -40,18 +40,18 @@
     "url": "https://github.com/Deivu/Shoukaku"
   },
   "dependencies": {
-    "ws": "^8.12.0"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@augu/eslint-config": "^3.0.0",
-    "@types/node": "^18.11.18",
+    "@augu/eslint-config": "^4.0.1",
+    "@types/node": "^18.16.1",
+    "@types/node-fetch": "^2.6.3",
     "@types/ws": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^8.23.0",
-    "gen-esm-wrapper": "^1.1.3",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.24",
-    "typescript": "^4.9.0"
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "tsup": "^6.7.0",
+    "typedoc": "^0.24.6",
+    "typescript": "^5.0.4"
   }
 }
