--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "node16",
+    "module": "es2020",
     "moduleResolution": "node16",
     "outDir": "dist",
     "target": "es2020",
