--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "module": "es2020",
-    "moduleResolution": "node16",
+    "lib": ["ES2020"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
-    "target": "es2020",
+    "target": "ES2020",
     "declaration": true,                              
     "declarationMap": true, 
     "sourceMap": true,
