--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npm run build:ts && npm run build:docs",
     "build:ts": "tsup --config tsup-config.json",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
-    "lint": "eslint --fix --ext .ts",
+    "lint": "eslint .",
     "prepare": "npm run build:ts"
   },
   "keywords": [
