--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Publish to NPM
@@ -17,6 +18,6 @@ jobs:
           registry-url: https://registry.npmjs.org
       - run: npm i
       - run: 'npm version --preid=git --no-git-tag-version 0.0.0-git.$(git rev-parse HEAD)'
-      - run: npm publish --access public --tag prerelease
+      - run: npm publish --provenance --access public --tag prerelease
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
