--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "lib": ["ES2023"],
     "module": "node16",
     "moduleResolution": "node16",
     "outDir": "dist",
     "target": "es2020",
-    "declaration": true,                              
+    "declaration": true,
     "declarationMap": true, 
     "sourceMap": true,
     "resolveJsonModule": true,
