chore: use vars to define node versions in actions

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Node
       uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: latest
     - name: Install Deps
       run: npm i
     - name: Lint code
