--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "url": "https://github.com/shipgirlproject/Shoukaku.git"
   },
   "dependencies": {
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@shipgirl/eslint-config": "^0.4.0",
