chore: ignore eslint in npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,6 @@
 .github
 .idea
 .vscode
-.eslintignore
-.eslintrc.json
 .gitattributes
 .gitignore
 assets/
@@ -11,5 +9,6 @@ src/
 index.ts
 tsconfig.json
 tsup-config.json
+eslint.config.mjs
 **.tgz
 **.md
