--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -10,6 +10,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Publish to NPM
         uses: actions/setup-node@v4
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
