--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -10,6 +10,8 @@ jobs:
     steps: 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Setup node
         uses: actions/setup-node@v4
