chore: cache npm and node

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: latest
+        cache: npm
+        cache-dependency-path: package-lock.json
     - name: Install Deps
       run: npm i
     - name: Lint code
