--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: latest
+          cache: npm
+          cache-dependency-path: package-lock.json
 
       - name: Install deps
         run: npm i
