--- a/.github/workflows/code-compile.yml
+++ b/.github/workflows/code-compile.yml
@@ -25,5 +25,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+        cache: npm
+        cache-dependency-path: package-lock.json
     - run: npm i
     - run: npm pack
