feat: multi version typedoc

--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -1,50 +1,84 @@
 name: Publish TypeDoc
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+  workflow_call:
+permissions:
+  contents: write # allows the 'Commit' step without tokens
 
 jobs:
-  build-docs:
-    runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: latest
-          cache: npm
-          cache-dependency-path: package-lock.json
-
-      - name: Install deps
-        run: npm i
-
-      - name: Build docs
-        run: npm run build:docs
-
-      - name: Upload pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs/
-
-  deploy-docs:
-    needs: build-docs
-
-    permissions:
-      id-token: write
-      pages: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
+  get_history: # create an artifact from the existing documentation builds
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-    
+      - name: get the typedoc repo
+        uses: actions/checkout@v4
+        with:
+            ref: typedoc
+
+      - name: tar the existing docs
+        run: |
+            mkdir -p ./docs
+            tar -cvf documentation.tar ./docs
+
+      - name: create a document artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: documentation
+            path: documentation.tar
+
+  build: # builds the distribution and then the documentation
+    needs: get_history
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout src
+        uses: actions/checkout@v4
+
+      - run: mkdir -p ./docs
+      - name: Download the existing documents artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: documentation
+      - run: tar -xf documentation.tar ./docs -C ./docs
+
+      - name: Build
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: npm
+      - run: npm i
+      - run: npm run build # set up 'build' script in your package.json
+
+      - name: Build documents
+        run: npm run build:docs #set up 'build:docs' build script in your package.json
+
+      - name: tar the new docs
+        run: tar -cvf newdocumentation.tar ./docs
+
+      - name: create a new document artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: newdocumentation
+          path: newdocumentation.tar
+
+  commit: # commit the old and new merged documents to typedoc/docs
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout the typedoc repo
+        uses: actions/checkout@v4
+        with:
+          ref: typedoc
+
+      - run: mkdir -p ./docs
+      - name: Download the new documents artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: newdocumentation
+      - run: tar -xf newdocumentation.tar ./docs -C ./docs
+
+      - name: commit
+        run: |
+          git config --global user.email "username@users.noreply.github.com"
+          git config --global user.name "Continuous Integration"
+          git add .
+          git commit -m "CI updated the documentation"
+          git push
