--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "npm run build:ts && npm run build:docs",
     "build:ts": "tsup --config tsup-config.json",
-    "build:docs": "typedoc --theme default --readme TypeDoc.md --name Shoukaku --out docs/ --entryPointStrategy expand src/.",
+    "build:docs": "typedoc --theme default --readme TypeDoc.md --name Shoukaku --out docs/ --entryPointStrategy expand --plugin @shipgirl/typedoc-plugin-versions src/.",
     "lint": "eslint .",
     "prepare": "npm run build:ts"
   },
@@ -41,6 +41,7 @@
     "url": "https://github.com/shipgirlproject/Shoukaku.git"
   },
   "dependencies": {
+    "@shipgirl/typedoc-plugin-versions": "^0.2.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
