--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     }
   },
   "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "build": "npm run build:ts && npm run build:docs",
     "build:ts": "tsup --config tsup-config.json",
     "build:docs": "typedoc --theme default --readme TypeDoc.md --name Shoukaku --out docs/ --entryPointStrategy expand src/.",
@@ -48,10 +50,15 @@
     "@shipgirl/eslint-config": "^0.4.0",
     "@types/node": "^22.8.2",
     "@types/ws": "^8.5.12",
+    "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.13.0",
     "pkg-pr-new": "^0.0.30",
+    "msw": "^2.3.0-ws.rc-12",
+    "picocolors": "^1.1.1",
     "tsup": "^8.3.5",
     "typedoc": "^0.26.10",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4",
+    "vitest-mock-extended": "^2.0.2"
   }
 }
