--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^22.8.2",
     "@types/ws": "^8.5.12",
     "eslint": "^9.13.0",
+    "pkg-pr-new": "^0.0.30",
     "tsup": "^8.3.5",
     "typedoc": "^0.26.10",
     "typescript": "^5.6.3"
