fix: prerelease action triggers

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -3,7 +3,8 @@ name: Prerelease
 on:
   push:
     branches:
-      - "**"
+      - "master"
+      - "v[0-9]+"
     tags:
       - "!**"
   pull_request:
